--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,8 +2,8 @@
   {{ $section_to_display := (.Site.Taxonomies.categories.top).Pages | lang.Merge (.Sites.First.Taxonomies.categories.top).Pages }}
 
   <div class="home">
-    <h1>Containerum</h1>
-    <h2>Container management platform with built-in revision control, teamwork and CI/CD pipelines</h2>
+    <h1>Containerum Distribution of Kubernetes</h1>
+    <h2>Containerum Distribution of Kubernetes is a production-ready Kubernetes distribution tested and maintained by Containerum team.</h2>
     <div class="break"></div>
     <div class="popular container-fluid">
       <h3 class="popular-title">Most common and helpful pages</h3>
