--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
 
   <div class="home">
     <h1>Containerum Distribution of Kubernetes</h1>
-    <h2>Containerum Distribution of Kubernetes is a production-ready Kubernetes distribution tested and maintained by Containerum team.</h2>
+    <h2>Containerum Distribution of Kubernetes is a production-ready Kubernetes distribution tested and maintained by Containerum team</h2>
     <div class="break"></div>
     <div class="popular container-fluid">
       <h3 class="popular-title">Most common and helpful pages</h3>
